# agentic-rag

./: .gitignore  PROGRESS.md  README.md  agentic_rag.py  app.py  config.yaml  document_processor.py  finetune_embedding.py  ingest.py  pyproject.toml  search_utils.py  simple_rag.py
docs/: finetune_embedding_notes.md  search_utils_explained.md
